--- a/css.css
+++ b/css.css
@@ -24,7 +24,7 @@ html::-webkit-scrollbar-thumb:hover {
 
 @font-face{
 	font-family:Modric;	
-	src:url(fonts/Modric.ttf)}
+	src:url(fonts/Modric.ttf)}eadea
 
 
 @font-face{
@@ -80,7 +80,7 @@ width: 100%}
 
 
 .menu{width: 100%;
-max-width:1400px;
+max-width:1300px;
 margin: 0 auto;
 padding-top: 20px;
 justify-content: right;
@@ -89,7 +89,7 @@ display:grid;
 	grid-template-columns: repeat(2,1fr);}
 
 .contenedor .logo{width: 100%;
-margin-left: 5%;}
+margin-left: 2%;}
 
 .contenedor .menu a{display: flex;
 text-decoration: none;
@@ -98,15 +98,15 @@ color: white;}
 .contenedor .menu a img{
 width: 85px;
 height: 75px;
-margin: 0px 5px;
+margin: 0px 2px;
 border-radius: 50%;
 padding: 5px;margin-top:-10px;}
 
 
 .contenedor .logo a h1{
 	font-family:Modric;
-margin-top: 8px;
-font-size: 38px;}
+margin-top: 12px;
+font-size: 35px;}
 
 
 .menu ul {
@@ -200,7 +200,8 @@ max-width: 1500px}
 .flex article img{width: 100%;
 margin-top: 200px;
 height: 300px;
-animation: up 7s infinite;}
+animation: up 7s infinite;
+max-width: 600px}
 
 @keyframes up{
 	0%{transform: translateY(0px);}
@@ -429,7 +430,7 @@ padding: 40px 20px;
 		 background-position: center; }
 
 .ser h3{color: white;
-font-family:usar;
+font-family:usar2;
 font-size: 35px;
 margin: 10px auto;
 padding-top: 40px;
@@ -691,7 +692,7 @@ cursor: pointer;color:
 
 .ideas{display: grid;
 grid-template-columns: repeat(2,1fr);
-width:950px;
+width:1100px;
 margin: 100px auto;
 grid-gap: 30px}
 
@@ -699,7 +700,7 @@ grid-gap: 30px}
 
 
 .ideas .img-idea img{
-	width:370px;
+	width:420px;
 height: 400px;
 border-radius: 20px ;
 z-index: -1;
@@ -856,15 +857,14 @@ font-family:didactgothic;
 .lo p{ font-size: 30px; 
 	margin-bottom: 40px ;
 	border-bottom: 1px solid black;
-text-align: center;font-family:didactgothic;	
-}
+text-align: center;font-family:didactgothic;}
 
 
 footer{background: #181e23;
     color: #dadfe2;}
 
 .footer-agencie{width: 95%;
-max-width: 1500px;
+max-width: 1300px;
 display: grid;
 grid-template-columns: repeat(2,1fr);
 margin: 0 auto;
@@ -999,7 +999,7 @@ background: #010e11}
 .grupo2-1{margin: 0 auto;
 padding: 20px 0px;
 width: 95%;
-max-width: 1200px;}
+max-width: 1300px;}
 
 
 
@@ -3027,7 +3027,8 @@ width: calc(140px * 10)}
 grid-template-columns: repeat(1,1fr);
 width:100%;
 margin: 10px auto;
-grid-gap: 20px}
+grid-gap: 20px;
+}
 
 .ideas .img-idea img{
 	width:300px;
